[gd_scene load_steps=5 format=3 uid="uid://mslpjlu8ll37"]

[ext_resource type="Script" uid="uid://dy646kb6u6bx1" path="res://scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="Theme" uid="uid://c3ksbq2n1vx0o" path="res://assets/themes/pause_menu.tres" id="1_n87rw"]

[sub_resource type="InputEventAction" id="InputEventAction_myx47"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_kukqi"]
events = [SubResource("InputEventAction_myx47")]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_myx47")

[node name="pause_backGround" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.258824)

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -50.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="bt_resume" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("1_n87rw")
shortcut = SubResource("Shortcut_kukqi")
text = "Resume"

[node name="bt_options" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("1_n87rw")
text = "Options
"

[node name="bt_quit" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("1_n87rw")
text = "Quit
"

[connection signal="pressed" from="menu_holder/bt_resume" to="." method="_on_bt_resume_pressed"]
[connection signal="pressed" from="menu_holder/bt_options" to="." method="_on_bt_options_pressed"]
[connection signal="pressed" from="menu_holder/bt_quit" to="." method="_on_bt_quit_pressed"]
